--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: minima
+theme: architect
 title: My Sample GitHub Pages Site
 description: This is just me trying out GitHub pages!  Do you like it?
